--- a/app/views/widgets/primary_content/_three_photo_callout_1.html
+++ b/app/views/widgets/primary_content/_three_photo_callout_1.html
@@ -1,25 +1,31 @@
 <div class="three-photo-callout-widget midPhotoCallouts clearfix">
     <a class="photoCallout" href="http://static.fjcdn.com/pictures/A+funny+squirrel+this+cute+squirrel+is+so+funny_9b8398_4599729.jpg">
-        <img alt="squirrel" height="130px" src="/" width="190px" />
+        <div class="image-container">
+            <img alt="squirrel" height="130px" src="http://static.fjcdn.com/pictures/A+funny+squirrel+this+cute+squirrel+is+so+funny_9b8398_4599729.jpg" width="190px" />
+        </div>
         <div class="caption">
             <div class="text">
-
+            hello there
             </div>
         </div>
     </a>
-    <a class="photoCallout" href="http://cdn.themetapicture.com/media/funny-squirrel-armor-war.jpg">
-        <img alt="" height="130px" src="/" width="190px" />
+    <a class="photoCallout" href="https://s-media-cache-ak0.pinimg.com/236x/9a/bf/1f/9abf1facfab751ac84780e4a4aef04a2.jpg">
+        <div class="image-container">
+            <img alt="" height="130px" src="https://s-media-cache-ak0.pinimg.com/236x/9a/bf/1f/9abf1facfab751ac84780e4a4aef04a2.jpg" width="190px" />
+        </div>
         <div class="caption">
             <div class="text">
-
+            My name is
             </div>
         </div>
     </a>
     <a class="photoCallout" href="http://cdnpix.com/show/imgs/2acea928ade4f7484e4c10b9180c0f88.jpg">
-        <img alt="" height="130px" src="/" width="190px" />
+        <div class="image-container">
+            <img alt="" height="130px" src="http://cdnpix.com/show/imgs/2acea928ade4f7484e4c10b9180c0f88.jpg" width="190px" />
+        </div>
         <div class="caption">
             <div class="text">
-
+            Slim shady
             </div>
         </div>
     </a>
