--- a/app/views/one_column/sample_landing_page.html.erb
+++ b/app/views/one_column/sample_landing_page.html.erb
@@ -3,6 +3,7 @@
 
 <%= widgets <<-YAML
     primary_content:
+      - single_column/messaging_2_column_text_left
       - single_column/messaging_2_column
       - single_column/messaging_2_column_with_bg_image
       - single_column/chapman_social_feed
