--- a/app/views/widgets/single_column/_messaging_2_column_with_bg_image.html
+++ b/app/views/widgets/single_column/_messaging_2_column_with_bg_image.html
@@ -1,4 +1,4 @@
-<div class="messaging-2-column" style="background-image: url('http://depositori.com/wp-content/uploads/2015/08/martian-g2m-a.jpg')">
+<div class="messaging-2-column text-left text-light" style="background-image: url('http://static6.techinsider.io/image/55d23605371d22a40e8c042b/the-first-person-to-spend-a-year-in-space-keeps-taking-amazing-photos.jpg')">
   <div class="outer-container">
     <div class="column media-column">
       <span class="center-media-helper"></span>
