--- a/app/views/widgets/single_column/_messaging_2_column.html
+++ b/app/views/widgets/single_column/_messaging_2_column.html
@@ -1,4 +1,4 @@
-<div class="messaging-2-column">
+<div class="messaging-2-column text-right">
 	<div class="outer-container">
 		<div class="column media-column">
 			<span class="center-media-helper"></span><img class="media" src="http://7-themes.com/data_images/out/45/6924102-funny-kitten-pictures.jpg"/>
