--- a/app/views/widgets/single_column/_messaging_2_column_text_left.html
+++ b/app/views/widgets/single_column/_messaging_2_column_text_left.html
@@ -1,9 +1,7 @@
-<div class="messaging-2-column text-right text-light">
+<div class="messaging-2-column text-left">
   <div class="outer-container">
     <div class="column media-column">
-      <span class="center-media-helper"></span><div class="media fluid-width-video-container">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/4nPuZ9chE7s" frameborder="0" allowfullscreen></iframe>
-      </div>
+      <span class="center-media-helper"></span><img class="media" src="http://7-themes.com/data_images/out/45/6924102-funny-kitten-pictures.jpg"/>
     </div>
     <div class="column text-column">
       <div class="column-wrap">
