Added 1 column messaging widget styles.

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -44,6 +44,7 @@
 @import "base/social-follow-us";
 @import "base/tabs";
 @import "base/tipsy";
+@import "base/fact-card";
 
 
 // Layout
@@ -85,7 +86,7 @@
 @import "widgets/spotlight-region";
 @import "widgets/three-box-callout";
 @import "widgets/news-events-feed";
-@import "widgets/single_column/messaging-2-column";
+@import "widgets/single_column/messaging";
 @import "widgets/single_column/cta-3-column";
 @import "widgets/single_column/chapman-social-feed";
 
