--- a/app/assets/stylesheets/neat/settings/_grid.scss
+++ b/app/assets/stylesheets/neat/settings/_grid.scss
@@ -57,4 +57,4 @@ $default-feature: min-width; // Default @media feature for the breakpoint() mixi
 
 $default-layout-direction: LTR !default;
 
-$widget-padding: 32px !default;
+$widget-padding: 16px*4 !default;
