--- a/app/views/widgets/single_column/_messaging_2_column_video.html
+++ b/app/views/widgets/single_column/_messaging_2_column_video.html
@@ -1,4 +1,4 @@
-<div class="messaging-2-column text-right text-light">
+<div class="messaging-widget messaging-widget__2-column messaging-widget__text-right messaging-widget__text-light">
   <div class="outer-container">
     <div class="column media-column">
       <span class="center-media-helper"></span><div class="media fluid-width-video-container">
