--- a/app/views/widgets/single_column/_messaging_2_column_with_bg_image.html
+++ b/app/views/widgets/single_column/_messaging_2_column_with_bg_image.html
@@ -1,4 +1,4 @@
-<div class="messaging-2-column text-left text-light" style="background-image: url('http://static.dolimg.com/lucas/movies/starwars/starwars_films_03-a5f94b04af09.jpg')">
+<div class="messaging-widget messaging-widget__2-column messaging-widget__text-left messaging-widget__text-light" style="background-image: url('http://static.dolimg.com/lucas/movies/starwars/starwars_films_03-a5f94b04af09.jpg')">
   <div class="outer-container">
     <div class="column media-column">
       <span class="center-media-helper"></span>
