--- a/app/assets/stylesheets/widgets/single_column/messaging.scss
+++ b/app/assets/stylesheets/widgets/single_column/messaging.scss
@@ -1,5 +1,5 @@
 /*  Base Styles */
-.messaging-2-column {
+.messaging-widget {
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
@@ -18,7 +18,6 @@
 
 	.media-column {
 		white-space: nowrap;
-		margin-bottom: $base-spacing * 2;
 	}
 
 	.center-media-helper {
@@ -63,48 +62,44 @@
 	.actions {
 		margin-top: 72px;
 		text-align: center;
-		@include media($medium-screen) {
-			text-align: left;
-		}
 	}
 }
 
-
-
-
-/* Text Right Variation */
-.messaging-2-column.text-right {
-
-	/* Medium Screen */
+/* One Column Variation */
+.messaging-widget__1-column {
+	.text-column {
+		text-align: center;
+	}
+	.media-column {
+		padding-top: $base-spacing * 4;
+	}
 	@include media($medium-screen) {
-		.media-column {
-			@include span-columns(8);
-		}
 		.text-column {
-			@include span-columns(9);
-			@include shift(1);
+			margin: 0 auto;
+			width: 75%;
 		}
 	}
-
-	/* Large Screen */
 	@include media($large-screen) {
-		.media-column {
-			@include span-columns(10);
-		}
 		.text-column {
-			@include span-columns(7);
-			@include shift(1);
+			width: 60%;
 		}
 	}
 }
 
 
 
+/* Two Column Variation */
+.messaging-widget__2-column {
+	.media-column {
+		margin-bottom: $base-spacing * 2;
+		padding: 0;
+	}
+	.text-column {
+		text-align: left;
+	}
 
-/* Text Left Variation */
-.messaging-2-column.text-left {
-	@include direction-context(right-to-left) {
-
+	/* Text Right Variation */
+	&.messaging-widget__text-right {
 		/* Medium Screen */
 		@include media($medium-screen) {
 			.media-column {
@@ -114,8 +109,10 @@
 				@include span-columns(9);
 				@include shift(1);
 			}
+			.actions {
+				text-align: left;
+			}
 		}
-
 		/* Large Screen */
 		@include media($large-screen) {
 			.media-column {
@@ -127,12 +124,42 @@
 			}
 		}
 	}
+
+
+	/* Text Left Variation */
+	&.messaging-widget__text-left {
+		@include direction-context(right-to-left) {
+			/* Medium Screen */
+			@include media($medium-screen) {
+				.media-column {
+					@include span-columns(8);
+				}
+				.text-column {
+					@include span-columns(9);
+					@include shift(1);
+				}
+				.actions {
+					text-align: left;
+				}
+			}
+			/* Large Screen */
+			@include media($large-screen) {
+				.media-column {
+					@include span-columns(10);
+				}
+				.text-column {
+					@include span-columns(7);
+					@include shift(1);
+				}
+			}
+		}
+	}
 }
 
 
 
-/* Light Variation */
-.messaging-2-column.text-light {
+/* Light Text Variation */
+.messaging-widget__text-light {
 	h1.title {
 		color: white;
 	}
