--- a/app/views/widgets/single_column/_messaging_1_column.html
+++ b/app/views/widgets/single_column/_messaging_1_column.html
@@ -1,12 +1,9 @@
-<div class="messaging-widget messaging-widget__2-column messaging-widget__text-left">
+<div class="messaging-widget messaging-widget__1-column">
   <div class="outer-container">
-    <div class="column media-column">
-      <span class="center-media-helper"></span><img class="media" src="http://7-themes.com/data_images/out/45/6924102-funny-kitten-pictures.jpg"/>
-    </div>
     <div class="column text-column">
       <div class="column-wrap">
         <h4 class="category">category</h4>
-        <h1 class="title">Sample Message With Photo</h1>
+        <h1 class="title">Sample Message With Video</h1>
         <div class="text-wrap">
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sit amet libero ultrices, aliquam ligula eu, sodales ligula. Ut maximus mauris tincidunt maximus hendrerit. Nullam velit felis, ultricies sit amet efficitur at, aliquet vitae velit. Phasellus dui magna, condimentum id fringilla sit amet, ultrices a magna. Ut semper, leo nec efficitur facilisis, nisi mi faucibus odio, ac ornare orci urna hendrerit
@@ -16,6 +13,11 @@
           </p>
         </div>
         <div class="actions"><a class= "button red">This is a button</a></div>
+      </div>
+    </div>
+    <div class="column media-column">
+      <span class="center-media-helper"></span><div class="media fluid-width-video-container">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/4nPuZ9chE7s" frameborder="0" allowfullscreen></iframe>
       </div>
     </div>
   </div>
