--- a/app/views/widgets/single_column/_messaging_1_column_facts.html
+++ b/app/views/widgets/single_column/_messaging_1_column_facts.html
@@ -29,5 +29,51 @@
       </div>
     </div>
 
+    <div class="fact-card">
+      <div class="fact-front orange">
+        <div class="fact-image chair"></div>
+        <div class="fact-content">
+          <span class="fact-stat-nums">23<br></span>
+          <span class="fact-title-1">average<br>class size</span>
+        </div>
+      </div>
+      <div class="fact-back fact-content">
+        <p class="fact-back-text">Chapman takes the top scores from each of your SAT sections, so if you take the test more than once, you'll get a higher score with Chapman than you might expect.</p>
+        <a class="fact-link">REQUEST INFORMATION »</a>
+      </div>
+    </div>
+
+    <div class="fact-card">
+      <div class="fact-front green">
+        <div class="fact-image books"></div>
+        <div class="fact-content">
+          <span class="fact-stat-nums">102<br></span>
+          <span class="fact-title-2">AREAS OF STUDY</span>
+          <span class="fact-stat-nums">23</span>
+          <span class="fact-title-2">MINORS</span>
+        </div>
+      </div>
+      <div class="fact-back fact-content">
+        <p class="fact-back-text">GPA averages are calculated in the following way, and this means that people who apply to Chapman are frequently in the top 10% of their graduating class.</p>
+        <a class="fact-link">REQUEST INFORMATION »</a>
+      </div>
+    </div>
+
+    <div class="fact-card">
+      <div class="fact-front blue">
+        <div class="fact-image people"></div>
+        <div class="fact-content">
+          <span class="fact-stat-nums">14:1</span>
+          <span class="fact-title-1">RATIO<br></span>
+          <span class="fact-title-2">STUDENT TO FACULTY</span>
+        </div>
+      </div>
+      <div class="fact-back fact-content">
+        <p class="fact-back-text">Chapman takes the top scores from each of your SAT sections, so if you take the test more than once, you'll get a higher score with Chapman than you might expect.</p>
+        <a class="fact-link">REQUEST INFORMATION »</a>
+      </div>
+    </div>
+  </div>
+
   </div>
 </div>
