--- a/app/assets/stylesheets/base/fact-card.scss
+++ b/app/assets/stylesheets/base/fact-card.scss
@@ -1,59 +1,28 @@
 .fact-card{
-
+    display: inline-block;
+    white-space: normal;
     margin: 30px auto;
     align-items: center;
-
-    /* How pronounced should the 3D effects be */
     perspective: 1000;
-    -webkit-perspective: 1000;
-    -moz-perspective: 1000;
-    -ms-perspective: 1000;
-    -o-perspective: 1000;
     width: 200px;
     height: 250px;
     position: relative;
-    /*Some UI */
     border-radius: 3px;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    -ms-border-radius: 3px;
-    -o-border-radius: 3px;
     font-size: 28px;
     cursor: pointer;
 
   .fact-front, .fact-back{
-
       display: flex;
       align-items: center;
-      /* Enable 3D transforms */
-      transform-style: preserve-3d;
-      -webkit-transform-style: preserve-3d;
-      -moz-transform-style: preserve-3d;
-      -ms-transform-style: preserve-3d;
-      -o-transform-style: preserve-3d;
       transform-style: preserve-3d;
       backface-visibility: hidden;
-      -webkit-backface-visibility: hidden;
-      -moz-backface-visibility: hidden;
-      -ms-backface-visibility: hidden;
-      -o-backface-visibility: hidden;
       width: 100%;
       height: 100%;
       position: absolute;
-      /* Animate the transitions */
-      -webkit-transition: 0.8s 0.4s;
-      -moz-transition: 0.8s 0.4s;
-      -ms-transition: 0.8s 0.4s;
-      -o-transition: 0.8s 0.4s;
-      transition: 0.8s 0.4s;
-
+      transition: 0.3s;
       text-align: center;
       color: #ffffff;
       border-radius: 3px;
-      -webkit-border-radius:3 px;
-      -moz-border-radius:3 px;
-      -ms-border-radius: 3px;
-      -o-border-radius: 3px;
   }
 
   .fact-content{
@@ -64,46 +33,22 @@
   .fact-back{
     /* The back side is flipped 180 deg by default */
     transform: rotateY(180deg);
-    -webkit-transform: rotateY(180deg);
-    -moz-transform: rotateY(180deg);
-    -ms-transform: rotateY(180deg);
-    -o-transform: rotateY(180deg);
     background-color: #ffffff;
-    /*position: relative;*/
     box-sizing: border-box;
     padding-bottom: 50px;
   }
 
   &:hover{
-
     /* When the container is hovered, flip the front side and hide it .. */
-    .fact-front{
+    .fact-front {
       transform: rotateY(180deg);
-      -webkit-transform: rotateY(180deg);
-      -moz-transform: rotateY(180deg);
-      -ms-transform: rotateY(180deg);
-      -o-transform: rotateY(180deg);
-
-      -webkit-transition: 0.8s;
-      -moz-transition: 0.8s;
-      -ms-transition: 0.8s;
-      -o-transition: 0.8s;
-      transition: 0.8s;
+      transition: 0.6s;
     }
 
     /* .. at the same time flip the back side into visibility */
-    .fact-back{
+    .fact-back {
       transform: rotateY(360deg);
-      -webkit-transform: rotateY(360deg);
-      -moz-transform: rotateY(360deg);
-      -ms-transform: rotateY(360deg);
-      -o-transform: rotateY(360deg);
-
-      -webkit-transition: 0.8s;
-      -moz-transition: 0.8s;
-      -ms-transition: 0.8s;
-      -o-transition: 0.8s;
-      transition: 0.8s;
+      transition: 0.6s;
     }
   }
 
