--- a/app/views/widgets/single_column/_messaging_1_column_facts.html
+++ b/app/views/widgets/single_column/_messaging_1_column_facts.html
@@ -3,7 +3,7 @@
     <div class="column text-column">
       <div class="column-wrap">
         <h4 class="category">category</h4>
-        <h1 class="title">Sample Message With Stats</h1>
+        <h1 class="title">Sample Message With Facts</h1>
         <div class="text-wrap">
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sit amet libero ultrices, aliquam ligula eu, sodales ligula. Ut maximus mauris tincidunt maximus hendrerit. Nullam velit felis, ultricies sit amet efficitur at, aliquet vitae velit. Phasellus dui magna, condimentum id fringilla sit amet, ultrices a magna. Ut semper, leo nec efficitur facilisis, nisi mi faucibus odio, ac ornare orci urna hendrerit
@@ -13,67 +13,69 @@
       </div>
     </div>
     <div class="column media-column">
+      <div class="media">
+        <div class="fact-card-container">
+          <div class="fact-card">
+            <div class="fact-front red">
+              <div class="fact-image mortarboard"></div>
+              <div class="fact-content">
+                <span class="fact-stat-nums">3.67</span>
+                <span class="fact-title-1">CHAPMAN'S</span>
+                <span class="fact-title-2">AVERAGE GPA</span>
+              </div>
+            </div>
+            <div class="fact-back fact-content">
+              <p class="fact-back-text">GPA averages are calculated in the following way, and this means that people who apply to Chapman are frequently in the top 10% of their graduating class.</p>
+              <a class="fact-link">REQUEST INFORMATION »</a>
+            </div>
+          </div>
 
-    <div class="fact-card">
-      <div class="fact-front red">
-        <div class="fact-image mortarboard"></div>
-        <div class="fact-content">
-          <span class="fact-stat-nums">3.67</span>
-          <span class="fact-title-1">CHAPMAN'S</span>
-          <span class="fact-title-2">AVERAGE GPA</span>
+          <div class="fact-card">
+            <div class="fact-front orange">
+              <div class="fact-image chair"></div>
+              <div class="fact-content">
+                <span class="fact-stat-nums">23<br></span>
+                <span class="fact-title-1">average<br>class size</span>
+              </div>
+            </div>
+            <div class="fact-back fact-content">
+              <p class="fact-back-text">Chapman takes the top scores from each of your SAT sections, so if you take the test more than once, you'll get a higher score with Chapman than you might expect.</p>
+              <a class="fact-link">REQUEST INFORMATION »</a>
+            </div>
+          </div>
+
+          <div class="fact-card">
+            <div class="fact-front green">
+              <div class="fact-image books"></div>
+              <div class="fact-content">
+                <span class="fact-stat-nums">102<br></span>
+                <span class="fact-title-2">AREAS OF STUDY</span>
+                <span class="fact-stat-nums">23</span>
+                <span class="fact-title-2">MINORS</span>
+              </div>
+            </div>
+            <div class="fact-back fact-content">
+              <p class="fact-back-text">GPA averages are calculated in the following way, and this means that people who apply to Chapman are frequently in the top 10% of their graduating class.</p>
+              <a class="fact-link">REQUEST INFORMATION »</a>
+            </div>
+          </div>
+
+          <div class="fact-card">
+            <div class="fact-front blue">
+              <div class="fact-image people"></div>
+              <div class="fact-content">
+                <span class="fact-stat-nums">14:1</span>
+                <span class="fact-title-1">RATIO<br></span>
+                <span class="fact-title-2">STUDENT TO FACULTY</span>
+              </div>
+            </div>
+            <div class="fact-back fact-content">
+              <p class="fact-back-text">Chapman takes the top scores from each of your SAT sections, so if you take the test more than once, you'll get a higher score with Chapman than you might expect.</p>
+              <a class="fact-link">REQUEST INFORMATION »</a>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="fact-back fact-content">
-        <p class="fact-back-text">GPA averages are calculated in the following way, and this means that people who apply to Chapman are frequently in the top 10% of their graduating class.</p>
-        <a class="fact-link">REQUEST INFORMATION »</a>
-      </div>
     </div>
-
-    <div class="fact-card">
-      <div class="fact-front orange">
-        <div class="fact-image chair"></div>
-        <div class="fact-content">
-          <span class="fact-stat-nums">23<br></span>
-          <span class="fact-title-1">average<br>class size</span>
-        </div>
-      </div>
-      <div class="fact-back fact-content">
-        <p class="fact-back-text">Chapman takes the top scores from each of your SAT sections, so if you take the test more than once, you'll get a higher score with Chapman than you might expect.</p>
-        <a class="fact-link">REQUEST INFORMATION »</a>
-      </div>
-    </div>
-
-    <div class="fact-card">
-      <div class="fact-front green">
-        <div class="fact-image books"></div>
-        <div class="fact-content">
-          <span class="fact-stat-nums">102<br></span>
-          <span class="fact-title-2">AREAS OF STUDY</span>
-          <span class="fact-stat-nums">23</span>
-          <span class="fact-title-2">MINORS</span>
-        </div>
-      </div>
-      <div class="fact-back fact-content">
-        <p class="fact-back-text">GPA averages are calculated in the following way, and this means that people who apply to Chapman are frequently in the top 10% of their graduating class.</p>
-        <a class="fact-link">REQUEST INFORMATION »</a>
-      </div>
-    </div>
-
-    <div class="fact-card">
-      <div class="fact-front blue">
-        <div class="fact-image people"></div>
-        <div class="fact-content">
-          <span class="fact-stat-nums">14:1</span>
-          <span class="fact-title-1">RATIO<br></span>
-          <span class="fact-title-2">STUDENT TO FACULTY</span>
-        </div>
-      </div>
-      <div class="fact-back fact-content">
-        <p class="fact-back-text">Chapman takes the top scores from each of your SAT sections, so if you take the test more than once, you'll get a higher score with Chapman than you might expect.</p>
-        <a class="fact-link">REQUEST INFORMATION »</a>
-      </div>
-    </div>
-  </div>
-
   </div>
 </div>
