--- a/app/views/widgets/single_column/_messaging_2_column.html
+++ b/app/views/widgets/single_column/_messaging_2_column.html
@@ -1,4 +1,4 @@
-<div class="messaging-widget messaging-widget__2-column messaging-widget__text-right messaging-widget__text-dark">
+<div class="messaging-widget messaging-widget__2-column messaging-widget__text-right messaging-widget__text-dark" style="background-image: url('http://7-themes.com/data_images/out/45/6924102-funny-kitten-pictures.jpg');">
 	<div class="outer-container">
 		<div class="column media-column">
 			<span class="center-media-helper"></span><img class="media" src="http://7-themes.com/data_images/out/45/6924102-funny-kitten-pictures.jpg"/>
