--- a/app/assets/stylesheets/widgets/single_column/chapman-social-feed.scss
+++ b/app/assets/stylesheets/widgets/single_column/chapman-social-feed.scss
@@ -9,6 +9,7 @@ $tile_width: 335px;
 	.chapman-social-feed-title {
 		@include main_heading(100);
 		padding: 0 $base-spacing*2;
+		margin-top: 0;
 		text-transform: none;
 	}
 
