--- a/app/views/widgets/single_column/_messaging_2_column_with_bg_image.html
+++ b/app/views/widgets/single_column/_messaging_2_column_with_bg_image.html
@@ -6,10 +6,10 @@
     <div class="column text-column">
       <div class="column-wrap">
         <h4 class="category">category</h4>
-        <h1 class="title">Sample Message With Photo and a Background Image</h1>
+        <h1 class="title">Obi Wan</h1>
         <div class="text-wrap">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sit amet libero ultrices, aliquam ligula eu, sodales ligula. Ut maximus mauris tincidunt maximus hendrerit. Nullam velit felis, ultricies sit amet efficitur at, aliquet vitae velit. Phasellus dui magna, condimentum id fringilla sit amet, ultrices a magna. Ut semper, leo nec efficitur facilisis, nisi mi faucibus odio, ac ornare orci urna hendrerit</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sit amet libero ultrices, aliquam ligula eu, sodales ligula. Ut maximus mauris tincidunt maximus hendrerit. Nullam velit felis, ultricies sit amet efficitur at, aliquet vitae velit. Phasellus dui magna, condimentum id fringilla sit amet, ultrices a magna. Ut semper, leo nec efficitur facilisis, nisi mi faucibus odio, ac ornare orci urna hendrerit</p>
+
         </div>
         <div class="actions"><a class= "button red">This is a button</a></div>
       </div>
