Creating css conventions.

--- a/app/views/widgets/single_column/_cta_3_column.html
+++ b/app/views/widgets/single_column/_cta_3_column.html
@@ -1,8 +1,8 @@
-<div class="cta-3-column">
+<div class="cta-3-column-widget">
 	<div class= "outer-container">
 		<div class="column">
 			<div class= "image-wrap">
-				<a href= ""><img class= "image" src="http://static.tumblr.com/vlykcdf/lN2l9mwte/cute-kitten-303.jpg" /></a> 
+				<a href= ""><img class= "image" src="http://static.tumblr.com/vlykcdf/lN2l9mwte/cute-kitten-303.jpg" /></a>
 			</div>
 			<div class= "text-wrap">
 				<h3 class="headline">Sample CTA Column</h3>
@@ -14,7 +14,7 @@
 		</div>
 		<div class="column">
 			<div class= "image-wrap">
-				<a href= ""><img class= "image" src="http://www.critterbabies.com/wp-content/gallery/kittens/Cute-Kitten-kittens-16122946-1280-800.jpg"/></a> 
+				<a href= ""><img class= "image" src="http://www.critterbabies.com/wp-content/gallery/kittens/Cute-Kitten-kittens-16122946-1280-800.jpg"/></a>
 			</div>
 			<div class= "text-wrap">
 				<h3 class="headline">Sample CTA Column</h3>
@@ -26,7 +26,7 @@
 		</div>
 		<div class="column">
 			<div class= "image-wrap">
-				<a href= ""><img class= "image" src="http://www.wallpapersfordesktop.org/wp-content/uploads/2015/10/cute-kittens30.jpg" /></a>  
+				<a href= ""><img class= "image" src="http://www.wallpapersfordesktop.org/wp-content/uploads/2015/10/cute-kittens30.jpg" /></a>
 			</div>
 			<div class= "text-wrap">
 				<h3 class="headline">Sample CTA Column</h3>
