--- a/app/assets/stylesheets/base/variables.scss
+++ b/app/assets/stylesheets/base/variables.scss
@@ -14,8 +14,7 @@ $cu-off-white: #f7f6f0;
 $cu-light-grey: #ECEBE5;
 $cu-warm-light-grey: #EDEADE;
 
-$white: #FFF;
-$black: #000;
+$white: #fff;
 $brown: #896d49;
 
 $teal: #25b6a5;
@@ -78,7 +77,7 @@ $dance-primary: #007165;
 $dance-secondary: #005249;
 
 $dodge-primary: #1f1f1f;
-$dodge-secondary: $black;
+$dodge-secondary: #000;
 $dodge-tertiary: #42413d;
 
 $pharmacy-primary: #959300;
