--- a/app/assets/stylesheets/widgets/single_column/messaging.scss
+++ b/app/assets/stylesheets/widgets/single_column/messaging.scss
@@ -55,10 +55,8 @@
 	}
 
 	.button.red {
-		text-align: center;
-		padding: 15px 25px;
-		font-size: 16px;
-		font-weight: normal;
+		@include button;
+		padding: $base-spacing $base-spacing*2;
 	}
 
 	.actions {
