--- a/app/views/one_column/sample_landing_page.html.erb
+++ b/app/views/one_column/sample_landing_page.html.erb
@@ -3,12 +3,13 @@
 
 <%= widgets <<-YAML
     primary_content:
+      - single_column/messaging_1_column_facts
       - single_column/messaging_2_column_facts
+      - single_column/messaging_2_column
       - single_column/messaging_2_column_video
       - single_column/messaging_2_column_with_bg_image
+      - single_column/subscribe
       - single_column/messaging_2_column_text_left
-      - single_column/messaging_2_column
-      - single_column/messaging_1_column_facts
       - single_column/messaging_1_column_image
       - single_column/messaging_1_column
       - single_column/chapman_social_feed
