--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -27,9 +27,7 @@
 @import "base/left-nav-sub-content";
 @import "base/left-nav-ul";
 @import "base/left-nav";
-@import "base/logo";
-@import "base/main-nav-links";
-@import "base/main-nav";
+@import "base/main_navigation";
 @import "base/sub-nav-links";
 @import "base/masthead-placeholder";
 @import "base/misc";
