--- a/app/views/widgets/single_column/_messaging_2_column_facts.html
+++ b/app/views/widgets/single_column/_messaging_2_column_facts.html
@@ -6,7 +6,7 @@
         <div class="fact-card-container">
           <div class="fact-card">
             <div class="fact-front orange">
-              <div class="fact-image chair"></div>
+              <div class="fact-image student"></div>
               <div class="fact-content">
                 <span class="fact-stat-nums">23<br></span>
                 <span class="fact-title-1">average<br>class size</span>
