--- a/app/views/widgets/single_column/_subscribe.html
+++ b/app/views/widgets/single_column/_subscribe.html
@@ -5,7 +5,7 @@
     </div>
     <div class="subscribe-form-column">
       <form>
-        <input type="text" class="text-input" placeholder="Your email address..."/>
+        <input type="email" class="text-input" placeholder="Your email address..."/>
         <button type="submit" class="submit">Submit</button>
       </form>
     </div>
