--- a/app/assets/stylesheets/base/mixins.scss
+++ b/app/assets/stylesheets/base/mixins.scss
@@ -203,6 +203,10 @@
 	}
 }
 
+@mixin box-shadow {
+	box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.3);
+}
+
 @mixin button($bg-color: $red, $text-color: white) {
 	display: inline-block;
 	padding: $base-spacing / 2 $base-spacing;
@@ -212,7 +216,7 @@
 	color: $text-color;
 	cursor: pointer;
 	border: none;
-	box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.3);
+	@include box-shadow;
 
 	&:hover, &:focus {
 		outline: none;
@@ -229,3 +233,4 @@
 @mixin transition($property) {
 	transition: $property 150ms;
 }
+
