end of day commit - lookin good so far

--- a/app/views/one_column/sample_landing_page.html.erb
+++ b/app/views/one_column/sample_landing_page.html.erb
@@ -3,6 +3,7 @@
 
 <%= widgets <<-YAML
     primary_content:
+      - single_column/cta_block
       - single_column/messaging_1_column_facts
       - single_column/messaging_2_column_facts
       - single_column/messaging_2_column
