--- a/app/views/widgets/single_column/_cta_block.html
+++ b/app/views/widgets/single_column/_cta_block.html
@@ -1,23 +1,68 @@
-<div class="cta-block-widget cta-block-widget__text-light">
+<div class="cta-block-widget">
   <div class= "outer-container">
     <div class="row">
       <div class="box" style="background-image: url('http://7-themes.com/data_images/out/45/6924102-funny-kitten-pictures.jpg');">
         <a href="http://www.google.com" class="content-container">
+          <span class="content content__text-light">
+            <h1>MY TITLE</h1>
+          </span>
+        </a>
+      </div>
+      <div class="box">
+        <a href="http://www.wikipedia.org" class="content-container">
           <span class="content">
+            <h1>MY OTHER TITLE</h1>
+            <p>My badass super awesome blah blah blah blah amazing description.</p>
+          </span>
+        </a>
+      </div>
+      <div class="box" style="background-image: url('http://static.dolimg.com/lucas/movies/starwars/starwars_films_03-a5f94b04af09.jpg');">
+        <a href="http://www.google.com" class="content-container">
+          <span class="content content__text-light">
             <h1>MY TITLE</h1>
             <p>My badass super awesome blah blah blah blah amazing description.</p>
           </span>
         </a>
       </div>
-      <div class="box">hello there</div>
-      <div class="box">hello there</div>
-      <div class="box">hello there</div>
+      <div class="box">
+        <a href="http://www.google.com" class="content-container">
+          <span class="content">
+            <h1>MY OTHER TITLE</h1>
+          </span>
+        </a>
+      </div>
     </div>
     <div class="row">
-      <div class="box">hello there</div>
-      <div class="box">hello there</div>
-      <div class="box">hello there</div>
-      <div class="box">hello there</div>
+      <div class="box" style="background-image: url('http://www.herdofsquirrels.com/wp-content/uploads/2014/08/squirrel-nut-cute-animal-nature-grass-1920x1280.jpg');">
+        <a href="http://www.google.com" class="content-container">
+          <span class="content content__text-light">
+            <h1>MY TITLE</h1>
+            <p>My badass super awesome blah blah blah blah amazing description.</p>
+          </span>
+        </a>
+      </div>
+      <div class="box">
+        <a href="http://www.google.com" class="content-container">
+          <span class="content">
+            <h1>MY OTHER TITLE</h1>
+            <p>My badass super awesome blah blah blah blah amazing description.</p>
+          </span>
+        </a>
+      </div>
+      <div class="box" style="background-image: url('http://mcphee.com/shop/media/catalog/product/cache/1/image/1200x1200/9df78eab33525d08d6e5fb8d27136e95/h/o/horse_head_squirrel_feeder_1.jpg');">
+        <a href="http://www.google.com" class="content-container">
+          <span class="content content__text-light">
+            <h1>MY TITLE</h1>
+          </span>
+        </a>
+      </div>
+      <div class="box" style="background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/Red_flag.svg/2000px-Red_flag.svg.png');">
+        <a href="http://www.google.com" class="content-container">
+          <span class="content content__text-light">
+            <h1>APPLY TODAY</h1>
+          </span>
+        </a>
+      </div>
     </div>
   </div>
 </div>
