--- a/app/assets/stylesheets/base/fact-card.scss
+++ b/app/assets/stylesheets/base/fact-card.scss
@@ -20,7 +20,7 @@
       width: 100%;
       height: 100%;
       position: absolute;
-      transition: 0.3s;
+      transition: 0.8s;
       text-align: center;
       color: #ffffff;
       border-radius: 3px;
@@ -40,17 +40,17 @@
     border: 2px solid #f7f6f0;
   }
 
-  &:hover{
+  &.flipped {
     /* When the container is hovered, flip the front side and hide it .. */
     .fact-front {
-      transform: rotateY(180deg);
-      transition: 0.6s;
+      transform: rotateY(180deg) !important;
+      transition: 0.8s !important;
     }
 
     /* .. at the same time flip the back side into visibility */
     .fact-back {
-      transform: rotateY(360deg);
-      transition: 0.6s;
+      transform: rotateY(360deg) !important;
+      transition: 0.8s !important;
     }
   }
 
