--- a/app/views/widgets/single_column/_messaging_1_column_facts.html
+++ b/app/views/widgets/single_column/_messaging_1_column_facts.html
@@ -26,7 +26,7 @@
             </div>
             <div class="fact-back fact-content">
               <p class="fact-back-text">GPA averages are calculated in the following way, and this means that people who apply to Chapman are frequently in the top 10% of their graduating class.</p>
-              <a class="fact-link">REQUEST INFORMATION »</a>
+              <a href="http://google.com" class="fact-link">REQUEST INFORMATION »</a>
             </div>
           </div>
 
